--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vite-plugin-dts": "^4.3.0"
+  },
+  "dependencies": {
+    "@kibamail/colors": "^1.0.0"
   }
 }
